# cs490-project

./: .gitignore  Dockerfile  Tiltfile  app.py  docker-compose.yml  makefile  readme.md  script.gs
.github/workflows/: cd.yaml  ci.yaml  on_pull_request.yaml
k8s/: build-pipeline.yaml  cd-pipeline.yaml  cd.yaml  ci-listener.yaml  ci-pipeline.yaml  deployment.yaml  ingress.yaml  lint-pipeline.yaml  service.yaml
scripts/: seed.py
src/: Dockerfile  pyproject.toml  schema.prisma
src/__test__/: fuzz.py
src/api/: app.py  calc.py  prices.py  stuff.py  util.py
terraform/: main.tf
