[tool.poetry]
name = "cs490-project"
version = "0.1.0"
description = ""
authors = ["David McNamee <david@mcnamee.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.8.2"
flask = {extras = ["async"], version = "^2.2.3"}
pyopenssl = "^23.1.1"
cryptography = "^40.0.1"
numpy-financial = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
