[tool.poetry]
name = "cs490-project"
version = "0.1.0"
description = ""
authors = ["David McNamee <david@mcnamee.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.8.2"
flask = {extras = ["async"], version = "^2.2.3"}
pyopenssl = "^23.1.1"
cryptography = "^40.0.1"
numpy-financial = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pyright = "^1.1.301"
bandit = "^1.7.5"
flake8 = "^6.0.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
